# CoreMLPipelines

./: .gitignore  Package.resolved  README.md
Sources/CoreMLPipelines/Pipelines/: TextGenerationPipeline+Models.swift  TextGenerationPipeline.swift
Sources/CoreMLPipelinesCLI/: ChatCLI.swift  ProfileCLI.swift  TextGenerationCLI.swift
coremlpipelinestools/: .gitignore  README.md  convert_causal_llm.py  pyproject.toml
