[project]
name = "coremlpipelinestools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate==1.2.1",
    "coremltools==8.1",
    "huggingface-hub[hf-transfer]==0.34.0",
    "python-dotenv>=1.1.1",
    "torch==2.5.1",
    "transformers==4.56.2", # 4.56.2
]
